--- a/netflix.html
+++ b/netflix.html
@@ -38,8 +38,8 @@
       <div class="location" id="home">
           <h1 id="home">Popular en nuestra relación</h1>
           <div class="box">
-            <a href=""><img src="img/11.jpg" alt=""></a>
-            <a href=""><img src="img/12.jpg" alt=""></a>
+            <a href="img/11.html"><img src="img/11.jpg" alt=""></a>
+            <a href="img/11.html"><img src="img/12.jpg" alt=""></a>
             <a href=""><img src="img/13.jpg" alt=""></a>
             <a href=""><img src="img/14.jpg" alt=""></a>
             <a href=""><img src="img/15.jpg" alt=""></a>
