--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a id="logo" href="#home"><img src="https://github.com/carlosavilae/Netflix-Clone/blob/master/img/logo.PNG?raw=true" alt="Logo Image"></a>
       </div>
       <nav class="main-nav">
-        <a href="#home">Home</a>
+        <a href="#home">Homer</a>
         <a href="#home">Popular</a>
         <a href="#reciente">Recientemente</a>
           <a href="#tvShows">Shows</a>
